--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.3",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4"
   },
   "scripts": {
